refactor: implement modular architecture and performance improvements
Major architectural improvements and code organization:
- Split monolithic code into modular services (config, utils, api, ui)
- Implement ES modules for better code organization
- Add centralized configuration management
- Create reusable utility functions

Performance & Security enhancements:
- Add caching mechanism for API responses
- Implement batch processing for posts
- Add retry mechanism with exponential backoff
- Improve input validation and sanitization
- Add proper error handling and logging

UX improvements:
- Add tooltips for cringe detection reasons
- Enhance error feedback and loading states
- Improve settings page functionality
- Add better stats tracking

Build system updates:
- Update manifest.json for ES modules support
- Add proper CSP headers
- Improve module loading system

Version bump: 0.0.2 -> 0.0.3

--- a/manifest.json
+++ b/manifest.json
@@ -2,16 +2,21 @@
     "manifest_version": 3,
     "name": "Cringe Guard: filter out cringe content on your LinkedIn feed using AI",
     "author": "Pankaj Tanwar",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "description": "A chrome extension that filters out cringe content (engagement click-bait, promotional content, and low-value off-topic posts etc) on your LinkedIn feed. It uses AI to analyse LinkedIn posts in real time and hides cringe worthy content.",
     "content_scripts": [
         {
             "js": [
+                "scripts/config.js",
+                "scripts/utils.js",
+                "scripts/api.js",
+                "scripts/ui.js",
                 "scripts/content.js"
             ],
             "matches": [
                 "https://www.linkedin.com/feed/*"
-            ]
+            ],
+            "type": "module"
         }
     ],
     "icons": {
@@ -28,5 +33,11 @@
     "permissions": [
         "activeTab",
         "storage"
+    ],
+    "web_accessible_resources": [
+        {
+            "resources": ["scripts/*.js"],
+            "matches": ["https://www.linkedin.com/*"]
+        }
     ]
 }
